# better-email

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: DESIGN.md  VALIDATION.md
scripts/: benchmark.mjs  ui-smoke.mjs
src/: App.tsx  design-tokens.css  mailUtils.test.ts  mailUtils.ts  main.tsx  providerCatalog.ts  styles.css  tauriBridge.mock.ts  tauriBridge.prod.ts  tauriBridge.ts  ui-2026.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: provider_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  credentials.rs  db.rs  imap_probe.rs  lib.rs  main.rs  models.rs  oauth.rs  pop3_probe.rs  protocol.rs  provider_probe.rs  smtp.rs  vcard.rs
src/app/: accountConnectionSettings.test.ts  accountConnectionSettings.ts  appConfig.test.ts  appConfig.tsx  clipboard.ts  connectionDiagnostics.test.ts  connectionDiagnostics.ts  forwarding.test.ts  forwarding.ts  inlineImages.test.ts  inlineImages.ts  logger.test.ts  logger.ts  messageDetailUtils.test.ts  messageDetailUtils.ts  providerCredentialGuidance.test.ts  providerCredentialGuidance.ts  providerValidation.test.ts  providerValidation.ts  providerWriteValidation.test.ts  providerWriteValidation.ts  snooze.test.ts  snooze.ts  types.ts
src/components/: AccountSwitcher.tsx  AppErrorBoundary.test.ts  AppErrorBoundary.tsx  Avatar.test.tsx  Avatar.tsx  CommandPalette.tsx  ComposerWindow.tsx  ConfirmDialog.test.ts  ConfirmDialog.test.tsx  ConfirmDialog.tsx  ContextMenu.tsx  (+23 more)
(+70 files in other folders)
