[package]
name = "better-email"
version = "0.1.0"
description = "A small cross-platform email client focused on low memory usage."
authors = ["Better Email contributors"]
edition = "2021"

[lib]
name = "better_email_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = ["protocol-asset"] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
once_cell = "1.21"
mail-parser = "0.11.4"
ammonia = "4.1.3"
keyring = "4.1.4"
security-framework = "3.7"
lettre = { version = "0.11.22", default-features = false, features = ["builder", "smtp-transport", "pool", "hostname", "rustls-tls"] }
imap = "3.0.0-alpha.15"
imap-proto = "0.16.7"
native-tls = "0.2.14"
tauri-plugin-notification = "2.3.3"
base64 = "0.22.1"
sha2 = "0.11.0"
urlencoding = "2.1.3"
uuid = { version = "1.23.4", features = ["v4"] }
ureq = "3.3.0"
